syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "AccountingPaymentProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Billing Account
message BillingAccountFlatData {
    option (routines.entity_type) = "BillingAccount";
    option (routines.keys).keys = "billing_account_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: billingAccountId
    string billing_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    routines.Currency account_limit = 2 [(routines.opts).field_type = "currency-amount"];
    string account_currency_uom_id = 3 [(routines.opts).field_type = "id"];
    string contact_mech_id = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 6 [(routines.opts).field_type = "date-time"];
    string description = 7 [(routines.opts).field_type = "description"];
    string external_account_id = 8 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string tenant_id = 11 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 23;
    map<string, google.protobuf.Any> attachments = 24 ;
}

message BillingAccountKey{
    string billing_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message BillingAccountList{
    repeated BillingAccountFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListBillingAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Billing Account Role
message BillingAccountRoleData {
    option (routines.entity_type) = "BillingAccountRole";
    option (routines.keys).keys = "billing_account_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: billingAccountId, partyId, roleTypeId, fromDate
    // fields
    string billing_account_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message BillingAccountRoleKey{
    string billing_account_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message BillingAccountRoleList{
    repeated BillingAccountRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListBillingAccountRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Credit Card Information
message CreditCardFlatData {
    option (routines.entity_type) = "CreditCard";
    option (routines.keys).keys = "payment_method_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentMethodId
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string card_type = 2 [(routines.opts).field_type = "short-varchar"];
    string card_number = 3 [(routines.opts).field_type = "credit-card-number"];
    string valid_from_date = 4 [(routines.opts).field_type = "credit-card-date"];
    string expire_date = 5 [(routines.opts).field_type = "credit-card-date"];
    string issue_number = 6 [(routines.opts).field_type = "credit-card-date"];
    string company_name_on_card = 7 [(routines.opts).field_type = "name"];
    string title_on_card = 8 [(routines.opts).field_type = "name"];
    string first_name_on_card = 9 [(routines.opts).field_type = "name"];
    string middle_name_on_card = 10 [(routines.opts).field_type = "name"];
    string last_name_on_card = 11 [(routines.opts).field_type = "name"];
    string suffix_on_card = 12 [(routines.opts).field_type = "name"];
    string contact_mech_id = 13 [(routines.opts).field_type = "id"];
    int64 consecutive_failed_auths = 14 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_failed_auth_date = 15 [(routines.opts).field_type = "date-time"];
    int64 consecutive_failed_nsf = 16 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_failed_nsf_date = 17 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 18 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 19 [(routines.opts).field_type = "date-time"];
    string tenant_id = 20 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 27;
    map<string, google.protobuf.Any> attachments = 28 ;
}

message CreditCardKey{
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message CreditCardList{
    repeated CreditCardFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCreditCards` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: EFT Account Information
message EftAccountFlatData {
    option (routines.entity_type) = "EftAccount";
    option (routines.keys).keys = "payment_method_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentMethodId
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string bank_name = 2 [(routines.opts).field_type = "name"];
    string routing_number = 3 [(routines.opts).field_type = "short-varchar"];
    string account_type = 4 [(routines.opts).field_type = "short-varchar"];
    string account_number = 5 [(routines.opts).field_type = "long-varchar"];
    string name_on_account = 6 [(routines.opts).field_type = "name"];
    string company_name_on_account = 7 [(routines.opts).field_type = "name"];
    string contact_mech_id = 8 [(routines.opts).field_type = "id"];
    int64 years_at_bank = 9 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    string tenant_id = 12 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 19;
    map<string, google.protobuf.Any> attachments = 20 ;
}

message EftAccountKey{
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message EftAccountList{
    repeated EftAccountFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListEftAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Payment
message PaymentFlatData {
    option (routines.entity_type) = "Payment";
    option (routines.keys).keys = "payment_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentId
    string payment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string payment_type_id = 2 [(routines.opts).field_type = "id"];
    string payment_method_type_id = 3 [(routines.opts).field_type = "id"];
    string payment_method_id = 4 [(routines.opts).field_type = "id"];
    string payment_gateway_response_id = 5 [(routines.opts).field_type = "id"];
    string payment_preference_id = 6 [(routines.opts).field_type = "id"];
    string party_id_from = 7 [(routines.opts).field_type = "id"];
    string party_id_to = 8 [(routines.opts).field_type = "id"];
    string role_type_id_to = 9 [(routines.opts).field_type = "id"];
    string status_id = 10 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp effective_date = 11 [(routines.opts).field_type = "date-time"];
    string payment_ref_num = 12 [(routines.opts).field_type = "short-varchar"];
    routines.Currency amount = 13 [(routines.opts).field_type = "currency-amount"];
    string currency_uom_id = 14 [(routines.opts).field_type = "id"];
    string comments = 15 [(routines.opts).field_type = "comment"];
    string fin_account_trans_id = 16 [(routines.opts).field_type = "id"];
    string override_gl_account_id = 17 [(routines.opts).field_type = "id"];
    routines.Currency actual_currency_amount = 18 [(routines.opts).field_type = "currency-amount"];
    string actual_currency_uom_id = 19 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 20 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    string tenant_id = 22 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 52;
    map<string, google.protobuf.Any> attachments = 53 ;
}

message PaymentKey{
    string payment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PaymentList{
    repeated PaymentFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPayments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Payment Application
message PaymentApplicationFlatData {
    option (routines.entity_type) = "PaymentApplication";
    option (routines.keys).keys = "payment_application_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentApplicationId
    string payment_application_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string payment_id = 2 [(routines.opts).field_type = "id"];
    string invoice_id = 3 [(routines.opts).field_type = "id"];
    string invoice_item_seq_id = 4 [(routines.opts).field_type = "id"];
    string billing_account_id = 5 [(routines.opts).field_type = "id"];
    string override_gl_account_id = 6 [(routines.opts).field_type = "id"];
    string to_payment_id = 7 [(routines.opts).field_type = "id"];
    string tax_auth_geo_id = 8 [(routines.opts).field_type = "id"];
    routines.Currency amount_applied = 9 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    string tenant_id = 12 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 21;
    map<string, google.protobuf.Any> attachments = 22 ;
}

message PaymentApplicationKey{
    string payment_application_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PaymentApplicationList{
    repeated PaymentApplicationFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentApplications` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Payment Content Type
message PaymentContentTypeFlatData {
    option (routines.entity_type) = "PaymentContentType";
    option (routines.keys).keys = "payment_content_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentContentTypeId
    string payment_content_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string parent_type_id = 2 [(routines.opts).field_type = "id"];
    routines.Indicator has_table = 3 [(routines.opts).field_type = "indicator"];
    string description = 4 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string tenant_id = 7 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13 ;
}

message PaymentContentTypeKey{
    string payment_content_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PaymentContentTypeList{
    repeated PaymentContentTypeFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentContentTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Payment Gateway Response
message PaymentGatewayResponseFlatData {
    option (routines.entity_type) = "PaymentGatewayResponse";
    option (routines.keys).keys = "payment_gateway_response_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentGatewayResponseId
    string payment_gateway_response_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string payment_service_type_enum_id = 2 [(routines.opts).field_type = "id"];
    string order_payment_preference_id = 3 [(routines.opts).field_type = "id"];
    string payment_method_type_id = 4 [(routines.opts).field_type = "id"];
    string payment_method_id = 5 [(routines.opts).field_type = "id"];
    string trans_code_enum_id = 6 [(routines.opts).field_type = "id"];
    routines.Currency amount = 7 [(routines.opts).field_type = "currency-amount"];
    string currency_uom_id = 8 [(routines.opts).field_type = "id"];
    string reference_num = 9 [(routines.opts).field_type = "short-varchar"];
    string alt_reference = 10 [(routines.opts).field_type = "short-varchar"];
    string sub_reference = 11 [(routines.opts).field_type = "short-varchar"];
    string gateway_code = 12 [(routines.opts).field_type = "short-varchar"];
    string gateway_flag = 13 [(routines.opts).field_type = "short-varchar"];
    string gateway_avs_result = 14 [(routines.opts).field_type = "short-varchar"];
    string gateway_cv_result = 15 [(routines.opts).field_type = "short-varchar"];
    string gateway_score_result = 16 [(routines.opts).field_type = "short-varchar"];
    string gateway_message = 17 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp transaction_date = 18 [(routines.opts).field_type = "date-time"];
    routines.Indicator result_declined = 19 [(routines.opts).field_type = "indicator"];
    routines.Indicator result_nsf = 20 [(routines.opts).field_type = "indicator"];
    routines.Indicator result_bad_expire = 21 [(routines.opts).field_type = "indicator"];
    routines.Indicator result_bad_card_number = 22 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 23 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 24 [(routines.opts).field_type = "date-time"];
    string tenant_id = 25 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 35;
    map<string, google.protobuf.Any> attachments = 36 ;
}

message PaymentGatewayResponseKey{
    string payment_gateway_response_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PaymentGatewayResponseList{
    repeated PaymentGatewayResponseFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentGatewayResponses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Maps PaymentTypes to GlAccountTypes, allowing user to configure payments and gl accounts
message PaymentGlAccountTypeMapData {
    option (routines.entity_type) = "PaymentGlAccountTypeMap";
    option (routines.keys).keys = "payment_type_id, organization_party_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentTypeId, organizationPartyId
    // fields
    string payment_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
    string gl_account_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message PaymentGlAccountTypeMapKey{
    string payment_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
}

message PaymentGlAccountTypeMapList{
    repeated PaymentGlAccountTypeMapData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentGlAccountTypeMaps` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Payment Method
message PaymentMethodFlatData {
    option (routines.entity_type) = "PaymentMethod";
    option (routines.keys).keys = "payment_method_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentMethodId
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string payment_method_type_id = 2 [(routines.opts).field_type = "id"];
    string party_id = 3 [(routines.opts).field_type = "id"];
    string gl_account_id = 4 [(routines.opts).field_type = "id"];
    string fin_account_id = 5 [(routines.opts).field_type = "id"];
    string description = 6 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp from_date = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string tenant_id = 11 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 29;
    map<string, google.protobuf.Any> attachments = 30 ;
}

message PaymentMethodKey{
    string payment_method_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PaymentMethodList{
    repeated PaymentMethodFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentMethods` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Payment Method Type GL Account
message PaymentMethodTypeGlAccountData {
    option (routines.entity_type) = "PaymentMethodTypeGlAccount";
    option (routines.keys).keys = "payment_method_type_id, organization_party_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: paymentMethodTypeId, organizationPartyId
    // fields
    string payment_method_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
    string gl_account_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message PaymentMethodTypeGlAccountKey{
    string payment_method_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
}

message PaymentMethodTypeGlAccountList{
    repeated PaymentMethodTypeGlAccountData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPaymentMethodTypeGlAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


